--- a/firmware/node_2/platformio.ini
+++ b/firmware/node_2/platformio.ini
@@ -13,6 +13,6 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 lib_deps = 
-	mobizt/Firebase Arduino Client Library for ESP8266 and ESP32@^4.4.16
-	adafruit/Adafruit SSD1306@^2.5.13
+	adafruit/Adafruit BME280 Library@^2.2.4
+	adafruit/Adafruit Unified Sensor@^1.1.14
 monitor_speed = 115200
